apps/medium-place/wikijs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: true
spec:
  tls:
    - hosts:
        - library.medium.place
      secretName: library.medium.place-tls
  rules:
    - host: library.medium.place
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wikijs
                port:
                  number: 3000
